nwe changes for challenges

--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -9,38 +9,37 @@
 	<div class="content-app-game" text-center>
 		<ion-grid>
 			<ion-row>
-				<ion-col col-md-4 col-5 class="game-score"><span>Puntos: </span><b>{{score}}</b></ion-col>
-				<ion-col col-md-4 col-offset-md-4 col-5 offset-2 class="game-time">{{initTime}}</ion-col>
+				<ion-col col-md-4 col-6 class="game-score"><span>Puntos: </span><b>{{score}}</b></ion-col>
+				<ion-col col-md-4 offset-md-4 col-5 offset-1 class="game-time">{{initTime}}</ion-col>
 			</ion-row>
+			<ion-row class="row-label">
+  				<ion-col class="custom-label-quiz" col-1 *ngFor="let quiz of quizzes; let i = index;">
+  					<div [ngStyle]="{ 'background-color' : quiz.color, 'border-color' : (i == currentPos ? '#333' : 'transparent') }">{{quiz.label}}</div>
+  				</ion-col>
+  			</ion-row>
 			<ion-row>
 				<ion-col col-12 class="game-point">
-					<b>(</b>Por <b>{{currentQuiz.gsx$puntos.$t}}</b> punto(s)<b>)</b>
+					<b>(</b>Por <b>{{currentQuiz.points}}</b> punto(s)<b>)</b>
 				</ion-col>
 			</ion-row>
 			<ion-row>
 				<ion-col col-12 class="game-title">
-					{{currentQuiz.gsx$titulo.$t}}
+					{{currentQuiz.title}}
 				</ion-col>
 			</ion-row>
 			<ion-row>
 				<ion-col col-12 class="game-clue">
-					{{currentQuiz.gsx$pista.$t}}
+					{{currentQuiz.clue}}
 				</ion-col>
 			</ion-row>
 			<ion-row>
 				<ion-col col-12 class="game-answer">
-					<!--ion-card>
-						<ion-list>
-							<ion-item-->
-								<ion-input autocapitalize="off" autofocus="autofocus" [(ngModel)]="inputAnswer" name="answer" placeholder="Tu respuesta..."></ion-input>
-							<!--/ion-item>
-						</ion-list>
-					</ion-card-->
+					<ion-input autocapitalize="off" autofocus="autofocus" [(ngModel)]="inputAnswer" name="answer" placeholder="Tu respuesta..." (keyup.enter)="checkAnswer()"></ion-input>
 				</ion-col>
 			</ion-row>
 			<ion-row class="game-btns">
 				<ion-col col-6 class="game-btn">
-					<button ion-button block round class="jump-btn" (click)="jumpQuiz()">SALTAR</button>
+					<button ion-button block round class="jump-btn" (click)="jumpQuiz()">PASAPALABRA</button>
 				</ion-col>
 				<ion-col col-6 class="game-btn">
 					<button ion-button block round class="check-btn" (click)="checkAnswer()">ARRIESGAR</button>
