--- a/src/pages/result/result.html
+++ b/src/pages/result/result.html
@@ -15,9 +15,9 @@
 			</ion-row>
 			<ion-row class="content-result">
 				<ion-col col-12 class="result-statistics"><span>Puntos: </span><b>{{score}}</b></ion-col>
+				<ion-col col-12 class="result-statistics"><span>Tiempo: </span><b>{{time}} segundo(s)</b></ion-col>
 				<ion-col col-12 class="result-statistics"><span>Correctos: </span><b>{{successful}}</b></ion-col>
 				<ion-col col-12 class="result-statistics"><span>Incorrectos: </span><b>{{wrong}}</b></ion-col>
-				<ion-col col-12 class="result-statistics"><span>Saltados: </span><b>{{jumped}}</b></ion-col>
 			</ion-row>
 			<ion-row class="result-title">
 				<ion-col col-12>
@@ -25,13 +25,13 @@
 				</ion-col>
 			</ion-row>
 			<div class="result-quizzes">
-				<ion-row align-items-center *ngFor="let item of quizzes; let i = index;" class="{{addClass(i)}} row">
-					<ion-col>{{item.gsx$titulo.$t}}</ion-col>
-					<ion-col>{{item.gsx$pista.$t}}</ion-col>
+				<ion-row align-items-center *ngFor="let quiz of quizzes; let i = index;" class="{{addClass(i)}} row">
+					<ion-col>{{quiz.title}}</ion-col>
+					<ion-col>{{quiz.clue}}</ion-col>
 					<ion-col col-auto>
-						<ion-row class="result-score" [ngStyle]="{ 'background-color' : item.color }">
-							<ion-col col-12>{{item.gsx$respuesta.$t}}</ion-col>
-							<ion-col col-12>{{item.score + ' / ' + item.gsx$puntos.$t}}</ion-col>
+						<ion-row class="result-score" [ngStyle]="{ 'background-color' : quiz.color }">
+							<ion-col col-12>{{quiz.answer}}</ion-col>
+							<ion-col col-12>{{quiz.score + ' / ' + quiz.points}}</ion-col>
 						</ion-row>
 					</ion-col>
 				</ion-row>
