last version firebase spreadsheet

--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -14,7 +14,7 @@
 			</ion-row>
 			<ion-row class="row-label">
   				<ion-col class="custom-label-quiz" col-1 *ngFor="let quiz of quizzes; let i = index;">
-  					<div [ngStyle]="{ 'background-color' : quiz.color, 'border-color' : (i == currentPos ? '#333' : 'transparent') }">{{quiz.label}}</div>
+  					<div [ngStyle]="{ 'background-color' : quiz.color, 'border-color' : (i == currentPos ? '#eee' : 'transparent') }">{{quiz.label}}</div>
   				</ion-col>
   			</ion-row>
 			<ion-row>
