--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,7 +1,7 @@
 <ion-content padding>
 	
 	<div class="content-app" text-center>
-		<div class="back-btn-header">
+		<div class="div-btn-header">
   			<button><ion-icon (click)="goToBack()" name="arrow-back"></ion-icon></button>
   		</div>
 		<div class="custom-register">
