--- a/src/pages/change-password/change-password.html
+++ b/src/pages/change-password/change-password.html
@@ -1,15 +1,50 @@
-<!--
-  Generated template for the ChangePasswordPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>change-password</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+	
+	<div class="content-app" text-center>
+		<div class="div-btn-header">
+  			<button><ion-icon (click)="goToBack()" name="arrow-back"></ion-icon></button>
+  		</div>
+		<div class="custom-register">
+			<div>
+				<img src="/assets/imgs/logo.png">
+			</div>
+			<ion-card>
+
+				<ion-card-content>
+
+			  		<h4>CAMBIAR CONTRASEÑA</h4>
+
+			  		<ion-list no-lines>
+			  
+			          <ion-item>
+			            <ion-label>Contraseña nueva</ion-label>
+			            <ion-input [(ngModel)]="userData.new_password" [type]="hidePassword ? 'password' : 'text'" (keyup)="validationUp('new_password')"></ion-input>
+			            <ion-icon slot="end" class="z-eye-icon" [name]="hidePassword ? 'md-eye' : 'md-eye-off'" (click)="hidePassword = !hidePassword" item-right></ion-icon>
+			          </ion-item>
+			          <div class="error"><span *ngIf="!validation.new_password.valid">{{validation.new_password.msg}}</span></div>
+
+			          <ion-item>
+			            <ion-label>Confirmar contraseña </ion-label>
+			            <ion-input [(ngModel)]="userData.re_new_password" type="password" (keyup)="validationUp('re_new_password')"></ion-input>
+			          </ion-item>
+			          <div class="error"><span *ngIf="!validation.re_new_password.valid">{{validation.re_new_password.msg}}</span></div>
+
+			          <div class="buttons-content">
+			            <ion-grid>
+			              <ion-row>
+			                <ion-col col-12>
+			                  <button ion-button round block type="submit" class="jump-btn" (click)="changePass()">Actualizar</button>
+			                </ion-col>
+			              </ion-row>
+			            </ion-grid>
+			          </div>
+
+			        </ion-list>
+
+			  	</ion-card-content>	
+
+			</ion-card>
+		</div>
+	</div>
 
 </ion-content>
