--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,15 +1,47 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>profile</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
+	
+	<div class="content-app" text-center>
+		<div class="div-btn-header">
+  			<button><ion-icon (click)="goToBack()" name="arrow-back"></ion-icon></button>
+  		</div>
+		<div class="custom-register">
+			<div>
+				<img src="/assets/imgs/logo.png">
+			</div>
+			<ion-card>
+			  <ion-card-content>
+
+			  	<h4>MIS DATOS</h4>
+
+			  	<ion-list no-lines>
+
+			      <ion-item>
+		            <ion-label>Nombres</ion-label>
+		            <ion-input [(ngModel)]="userData.firstname" type="text" (keyup)="validationUp('firstname')"></ion-input>
+		          </ion-item>
+		          <div class="error"><span *ngIf="!validation.firstname.valid">{{validation.firstname.msg}}</span></div>
+
+		          <ion-item>
+		            <ion-label>Apellidos</ion-label>
+		            <ion-input [(ngModel)]="userData.lastname" type="text" (keyup)="validationUp('lastname')"></ion-input>
+		          </ion-item>
+		          <div class="error"><span *ngIf="!validation.lastname.valid">{{validation.lastname.msg}}</span></div>
+
+		          <div class="buttons-content">
+		            <ion-grid>
+		              <ion-row>
+		                <ion-col col-12>
+		                  <button ion-button round block type="submit" class="jump-btn" (click)="updateProfile()">Guardar</button>
+		                </ion-col>
+		              </ion-row>
+		            </ion-grid>
+		          </div>
+
+		        </ion-list>
+
+			  </ion-card-content>
+			</ion-card>
+		</div>
+	</div>
 
 </ion-content>
