--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,6 +4,7 @@
 		<div class="custom-login">
 			<div>
 				<img src="/assets/imgs/logo.png">
+				<div class="autor-name"><b>Lic. Ruth Rosario Coaquira</b></div>
 			</div>
 			<ion-card>
 			  <ion-card-content>
